* Ensure strict arguments.length comparisons, cleanup Array#inject, and remove arguments.length based forking in Array#first and Array#last. [jddalton]

* Updated Array, Enumerable, and String APIs. [FuseJS LH #16] [jddalton, Joe Gornick]
  Note: Backwards compatibility warning.
   - Renamed methods: include -> contains
   - Removed methods: detect, reject
   - Removed aliases: all, any, collect, entries, find, findAll, member, select

   - Updated methods:
     Enumerable.contains: Added a strict parameter for strict comparisons.

   - Added methods:
     Enumerable.first: Replaces the need for `detect` and accepts optional parameters.
       * first(n): Returns an array containing the first n of the list.
       * first(callback, [thisArg]): Returns the first item when the callback returns true.
     Enumerable.last: Same as Enumerable.first, but starts from the end.

* Fix Safari 3.0.4 bug in Element#update when updating COLGROUP and OPTGROUP elements as well as cleanup the Safari 2 insertion wrapper for script elements. [jddalton]

* Ensure exceptions thrown in the Timer's callback are not swallowed by the try-catch in onTimerEvent(). [jddalton]

* Add Object.isEmpty() utility method to help detect when an object contains no properties of its own. [Prototype LH #245] [jddalton, Ken Snyder]

* Cleanup String#escapeHTML and String#unescapeHTML as well as standardize capability check property values to reduce extraneous text. [jddalton]

* Fix IE bug where String#replace sets regexp's lastIndex property. [jddalton]

* Optimize Hash using the `expando` property to avoid costly Object.hasKey() lookups. [jddalton, kangax]

* Add unique private `expando` property. [jddalton]

* Fix regression bug in the Object._each() Safari 2 fork. [jddalton]

* Ensure Object.isHash() returns false for Hash.prototype. [jddalton]

* unit test: Update unit test framework. [jddalton, Tobie Langel]
