@@ -1,3 +1,5 @@
+* Remove unneeded `decodeURIComponent(escape(json))` from Ajax.Response#_getHeaderJSON and rely on proper encoding instead. [Prototype LH #620] [FuseJS LH #27] [jddalton, Mark Caudill, Paul Alexandrow]
+
 * Ensure strict arguments.length comparisons, cleanup Array#inject, and remove arguments.length based forking in Array#first and Array#last. [jddalton]
 
 * Updated Array, Enumerable, and String APIs. [FuseJS LH #16] [jddalton, Joe Gornick]
